@startuml

title __APP's Class Diagram__\n

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.App {
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.BuildConfig {
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.MainActivity {
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.MapsActivity {
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace comparators {
      class com.example.yolov2_traffic_signs.comparators.DetectionComparator {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace models {
      class com.example.yolov2_traffic_signs.models.CellRecognition {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace models {
      class com.example.yolov2_traffic_signs.models.Detection {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace models {
      class com.example.yolov2_traffic_signs.models.TrafficSigns {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace services {
      class com.example.yolov2_traffic_signs.services.GetTrafficSigns {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace services {
      class com.example.yolov2_traffic_signs.services.LocationService {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace utils {
      class com.example.yolov2_traffic_signs.utils.ArgMax {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace utils {
      class com.example.yolov2_traffic_signs.utils.SignIcon {
      }
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    namespace utils {
      class com.example.yolov2_traffic_signs.utils.Softmax {
      }
    }
  }
  

  com.example.yolov2_traffic_signs.App -up-|> android.app.Application
  com.example.yolov2_traffic_signs.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.yolov2_traffic_signs.MainActivity o-- com.example.yolov2_traffic_signs.services.LocationService : locationService
  com.example.yolov2_traffic_signs.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.yolov2_traffic_signs.MapsActivity -up-|> androidx.fragment.app.FragmentActivity
  com.example.yolov2_traffic_signs.comparators.DetectionComparator .up.|> java.util.Comparator
  com.example.yolov2_traffic_signs.services.GetTrafficSigns .up.|> com.google.android.gms.tasks.Continuation
  com.example.yolov2_traffic_signs.services.LocationService .up.|> android.location.LocationListener
  com.example.yolov2_traffic_signs.services.LocationService -up-|> android.app.Service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
